fix alignment of summary header

--- a/src/app/containers/results/accordion/accordion.component.scss
+++ b/src/app/containers/results/accordion/accordion.component.scss
@@ -126,6 +126,6 @@ mat-accordion {
 }
 
 .summary-header {
-  margin-bottom: 15px;
+  margin: 0 0 15px 30px;
   font-family: vars.$font-stack; 
 }
